# wtm-worktree-manager

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.js  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  tsconfig.renderer.test.json
.claude/: settings.local.json
.github/workflows/: build.yml  bump-dev-version.yml  bump-main-version.yml  create-release.yml  release-binaries.yml  test-release-build.yml  tests.yml
.wtm/: config.json
agents/: __init__.py
agents/wtm_multi_agent/: README.md  __init__.py  cli.py  config.py  context.py  orchestrator.py
agents/wtm_multi_agent/agents/: __init__.py  base.py  coding.py  jira.py  react_env.py  worktree.py
agents/wtm_multi_agent/utils/: __init__.py  cli.py
crates/vt100/src/: grid.rs  screen.rs
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  ROADMAP.md  USER_GUIDE.md  tui-architecture.md
scripts/: build-renderer.mjs  copy-static.mjs  ensure-node-pty.cjs  update-homebrew-tap.sh
scripts/completions/: wtm.bash  wtm.zsh
src/: config.rs  main.rs  wtm_paths.rs
src/commands/: completions.rs  init.rs  mod.rs  workspace.rs
src/core/: projectConfig.ts  workspaceManager.ts
src/docker/: mod.rs
src/git/: mod.rs  status.rs
src/gui/: mod.rs
src/jira/: mod.rs
src/main/: dockerComposeInspector.ts  jiraIntegration.ts  jiraTicketCache.ts  main.js  main.ts  preload.js  preload.ts  projectConfig.ts  projectManager.ts  settingsManager.js  settingsManager.ts  terminalHost.ts  terminalHostClient.ts  terminalHostPaths.ts  terminalHostProtocol.ts  terminalManager.js  terminalManager.ts  terminalSessionStore.js  terminalSessionStore.ts  tmuxController.ts  workspaceManager.js  workspaceManager.ts
src/main/ipc/: agentHandlers.ts  projectHandlers.ts  terminalHandlers.ts  workspaceHandlers.ts
src/main/services/: agentService.ts  gitService.ts  projectService.ts  terminalService.ts  workspaceService.ts
src/renderer/: App.tsx  global.d.ts  index.html  index.js  index.tsx  react-shim.d.ts  stateTypes.ts  styles.css  types.ts
src/renderer/components/: AgentDock.tsx  AppHeader.tsx  ComposeServicesPanel.tsx  CreateWorkspaceForm.tsx  SettingsOverlay.tsx  SettingsPanel.tsx  (+2 more)
src/shared/: agent.ts  branch.ts  dockerCompose.ts  ipc.ts  jira.ts
src/tui/: app.rs  cli.ts  keymap.rs  mod.rs  pty_tab.rs  size.rs
tests/: cli.rs  vt100_scrollback.rs
tests/e2e/: app.spec.js  terminal-persistence.spec.js  utils.js
tests/unit/: jiraShared.test.js  jiraTicketCache.test.js  persistence.test.js  projectConfig.test.js  projectService.test.js  rendererStore.spec.mjs  settingsManager.test.js  terminalManager.test.js  terminalService.test.js  widgetsRegistry.test.js  workspaceManager.test.js  workspaceService.test.js
(+38 files in other folders)
