[package]
name = "wtm"
version = "0.1.0"
edition = "2021"
description = "CLI and TUI tooling for managing Git worktrees from a unified workspace."
license = "MIT"
repository = "https://github.com/tefla/wtm-worktree-manager"
homepage = "https://github.com/tefla/wtm-worktree-manager"
documentation = "https://github.com/tefla/wtm-worktree-manager#readme"
readme = "README.md"
keywords = ["git", "worktree", "cli", "tui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui-term = { version = "0.2", features = ["vt100"] }
portable-pty = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
